--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kdepimlibs (4:4.13.0.6-0~kolab2) UNRELEASED; urgency=medium
+
+  * Update symbols for other distros
+
+ -- Sandro Knauß (Kolab Systems) <knauss@kolabsys.com>  Fri, 11 Dec 2015 15:16:12 +0100
+
 kdepimlibs (4:4.13.0.6-0~kolab1) unstable; urgency=medium
 
   * New upstream release 4.13.0.6
