New upstream release 4.13.0.8

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,10 @@
-kdepimlibs (4:4.13.0.7-0~kolab1) UNRELEASED; urgency=medium
+kdepimlibs (4:4.13.0.8-0~kolab1) unstable; urgency=medium
+
+  * New upstream release 4.13.0.8
+
+ -- Sandro Knauß <knauss@kolabsys.com>  Fri, 19 Feb 2016 09:39:21 +0100
+
+kdepimlibs (4:4.13.0.7-0~kolab1) unstable; urgency=medium
 
   * New upstream release 4.13.0.7
 
