--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,27 @@
+kdepimlibs (4:4.13.0.13-0~kolab1) unstable; urgency=medium
+
+  * New upstream release 4.13.0.13
+
+ -- Christian Mollekopf (Kolab Systems) <mollekopf@kolabsys.com>  Wed, 11 Apr 2016 15:36:55 +0200
+
+kdepimlibs (4:4.13.0.12-0~kolab1) unstable; urgency=medium
+
+  * New upstream release 4.13.0.12
+
+ -- Christian Mollekopf (Kolab Systems) <mollekopf@kolabsys.com>  Wed, 8 Apr 2016 15:36:55 +0200
+
+kdepimlibs (4:4.13.0.11-0~kolab1) unstable; urgency=medium
+
+  * New upstream release 4.13.0.11
+
+ -- Christian Mollekopf (Kolab Systems) <mollekopf@kolabsys.com>  Wed, 6 Apr 2016 15:36:55 +0200
+
+kdepimlibs (4:4.13.0.10-0~kolab1) unstable; urgency=medium
+
+  * New upstream release 4.13.0.10
+
+ -- Sandro Knauß (Kolab Systems) <knauss@kolabsys.com>  Sat, 02 Apr 2016 02:12:08 +0200
+
 kdepimlibs (4:4.13.0.8-0~kolab1) unstable; urgency=medium
 
   * New upstream release 4.13.0.8
