--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kdepimlibs (4:4.13.0.14-0~kolab1) unstable; urgency=medium
+
+  * New upstream release 4.13.0.14
+
+ -- Christian Mollekopf (Kolab Systems) <mollekopf@kolabsys.com>  Wed, 11 Apr 2016 23:36:55 +0200
+
 kdepimlibs (4:4.13.0.13-0~kolab1) unstable; urgency=medium
 
   * New upstream release 4.13.0.13
