--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kdepimlibs (4:4.13.0.22-0~kolab1) unstable; urgency=medium
+
+  * New upstream release 4.13.0.22
+
+ -- Christian Mollekopf (Kolab Systems) <mollekopf@kolabsys.com>  Mon, 09 May 2016 16:41:42 +0000
+
 kdepimlibs (4:4.13.0.21-0~kolab1) unstable; urgency=medium
 
   * New upstream release 4.13.0.21
