--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kdepimlibs (4:4.13.0.26-0~kolab1) unstable; urgency=medium
+
+  * New upstream release 4.13.0.26
+
+ -- Sandro Knauß (Kolab Systems) <knauss@kolabsys.com>  Thu, 09 Jun 2016 10:23:41 +0000
+
 kdepimlibs (4:4.13.0.24-0~kolab1) unstable; urgency=medium
 
   * New upstream release 4.13.0.24
